--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multi-download": "^3.0.0",
     "raw-loader": "^4.0.1",
     "requestidlecallback": "^0.3.0",
+    "splitpanes": "^2.2.1",
     "tailwindcss": "^1.4.6",
     "tailwindcss-neumorphism": "^0.1.0",
     "text-canvas": "^0.1.3-alpha",
