--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/standalone": "^7.11.4",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-virtual": "^2.0.3",
     "@tweenjs/tween.js": "^18.6.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "brace": "^0.11.1",
@@ -35,6 +38,9 @@
     "multi-download": "^3.0.0",
     "raw-loader": "^4.0.1",
     "requestidlecallback": "^0.3.0",
+    "rollup": "^2.26.5",
+    "rollup-plugin-glslify": "^1.2.0",
+    "rollup-plugin-string": "^3.0.0",
     "splitpanes": "^2.2.1",
     "tailwindcss": "^1.4.6",
     "tailwindcss-neumorphism": "^0.1.0",
@@ -49,7 +55,9 @@
     "vue-hot-reload-api": "^2.3.4",
     "vue-router": "^3.3.4",
     "vue2-ace-editor": "^0.0.15",
-    "worker-loader": "^3.0.2"
+    "vuedraggable": "^2.24.1",
+    "worker-loader": "^3.0.2",
+    "zustand": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
